[package]
name = "nvim-updater-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.15", features = ["derive"] }
console = "0.15.1"
futures-util = "0.3.21"
indicatif = "0.17.0"
regex = "1.6.0"
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
